rsoc-vmchecker: Mention tests required on Conclusion slide

--- a/rsoc-vmchecker/rsoc-vmchecker.tex
+++ b/rsoc-vmchecker/rsoc-vmchecker.tex
@@ -134,6 +134,7 @@ cosmin.didii@gmail.com \& razvan@rosedu.org}
     \item mod de publicare automată a codului pentru WebUI (post-receive hook)
     \item definitivarea interfeței
     \item dezvoltarea de teste unitare
+    \item test, test and test; and then test; and get feedback
     \item integrarea în vmchecker (semestrul 2 2012-2013)
     \item integrare facilități de feedback direct în interfață
     \item unificat repository-uri, pagină de Facebook etc.
@@ -147,7 +148,8 @@ cosmin.didii@gmail.com \& razvan@rosedu.org}
     \item absența unor discuții legate de partea de software engineering și
       specificații de proiect pe componente
     \item design first, implement later (business layer vs. application layer)
-    \item e utilă dezvoltarea \textbf{în} cadrul unui cod deja existent
+    \item e utilă dezvoltarea \textbf{în} cadrul unui cod deja existent și a
+      unei comunități existente
     \item folosire precară a Git
     \item tehnici de dezvoltare Web
     \item aspecte de utilizabilitate
