foss-upb: Fix typo in "Toools"

--- a/foss-upb/foss-upb.tex
+++ b/foss-upb/foss-upb.tex
@@ -165,7 +165,7 @@ razvan.deaconescu@cs.pub.ro}
   \end{center}
 \end{frame}
 
-\begin{frame}{Internships and Companies with Focus on Linux and Linux Toools}
+\begin{frame}{Internships and Companies with Focus on Linux}
   \begin{center}
     {\small
       \pause Intel \\
