despre-dezvat: Complete slides

--- a/despre-dezvat/despre-dezvat.tex
+++ b/despre-dezvat/despre-dezvat.tex
@@ -20,7 +20,7 @@
 \setbeamertemplate{navigation symbols}{}
 
 \title[Despre dezvăț]{Despre dezvăț: Uneori strici ca să construiești}
-\institute{Info Educație 2016 (Gălăciuc, Vrancea)}
+\institute{InfoEducație 2016 (Gălăciuc, Vrancea)}
 \author[Răzvan Deaconescu]{Răzvan Deaconescu \\
 razvan.deaconescu@cs.pub.ro}
 \date{5 august 2016}
@@ -40,94 +40,139 @@ razvan.deaconescu@cs.pub.ro}
   \end{center}
 \end{frame}
 
-\begin{frame}{Fiz Buzz Test}
+\begin{frame}{Fizz Buzz Test}
   \begin{center}
-    \scriptsize
+    \small
     \url{http://c2.com/cgi/wiki?FizzBuzzTest}
   \end{center}
-The Fizz-Buzz test is an interview question designed to help filter out the 99.5\% of programming job candidates who can't seem to program their way out of a wet paper bag. The text of the programming assignment is as follows:
-
-    Write a program that prints the numbers from 1 to 100. But for multiples of three print ``Fizz'' instead of the number and for the multiples of five print ``Buzz''. For numbers which are multiples of both three and five print ``FizzBuzz''.
-
-I think Fizz-Buzz is ``hard'' for some programmers because (\#1) it doesn't fit into any of the patterns that were given to them in school assignments, and (\#2) it isn't possible to directly and simply represent the necessary tests, without duplication, in just about any commonly-used modern programming language.
+  \scriptsize
+  \pause \textit{The Fizz-Buzz test is an interview question designed to help filter out the 99.5\% of programming job candidates who can't seem to program their way out of a wet paper bag. The text of the programming assignment is as follows:} \\
+  \vspace{3mm}
+  \pause \textit{Write a program that prints the numbers from 1 to 100. But for multiples of three print ``Fizz'' instead of the number and for the multiples of five print ``Buzz''. For numbers which are multiples of both three and five print ``FizzBuzz''.} \\
+  \vspace{3mm}
+  \pause \textit{I think Fizz-Buzz is ``hard'' for some programmers because (\#1) it doesn't fit into any of the patterns that were given to them in school assignments, and (\#2) it isn't possible to directly and simply represent the necessary tests, without duplication, in just about any commonly-used modern programming language.} \\
 \end{frame}
 
 \begin{frame}{Experimentul cu maimuțele}
-  TODO
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.8\textwidth]{img/monkey-experiment}
+  \end{figure}
+  \begin{center}
+    \tiny
+    \url{http://9gag.com/gag/aA1Z16o/curious-monkey-experiment-are-you-a-blind-follower}
+  \end{center}
 \end{frame}
 
 \begin{frame}{It's all about the money}
   \begin{itemize}
-    \item Ești manager.
-    \item Ai nevoie ca echipa pe care o conduci să vină cu soluții creative la o problemă.
-    \item Le spui că le acorzi un bonus de 25\% dacă vin astfel de soluții.
+    \pause \item Ești manager.
+    \pause \item Ai nevoie ca echipa pe care o conduci să vină cu soluții creative la o problemă.
+    \pause \item Le spui că le acorzi un bonus de 25\% dacă vin astfel de soluții.
   \end{itemize}
+  \pause
   \begin{center}
     Dan Pink: The Suprising Truth About What Motivates Us\\
+    \vspace{3mm}
     \scriptsize
     \url{http://www.ted.com/talks/dan_pink_on_motivation?language=en}
   \end{center}
 \end{frame}
 
-\begin{frame}{Anakin Skywalker}
-  citat Yoda
+\begin{frame}{Luke Skywalker: Too Old}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.7\textwidth]{img/yoda-too-old}
+  \end{figure}
+  \begin{center}
+    \scriptsize
+    \url{https://memegenerator.net/instance/65152287}
+  \end{center}
 \end{frame}
 
 \begin{frame}{Cum învățăm?}
-  de la cei din jur
-  din experiență
-  din societate
-  din ce vedem, auzim, ascultăm
-  din ce citim
-  de pe Internet
+  \begin{itemize}
+    \pause \item de la cei din jur
+    \pause \item din experiență
+    \pause \item din societate
+    \pause \item din ce vedem, auzim, ascultăm
+    \pause \item din ce citim
+    \pause \item de pe Internet
+  \end{itemize}
 \end{frame}
 
 \begin{frame}{Problema Internet-ului}
-  multă informație
-  informația nu este filtrată
-  îți dă soluția la problemă, nu cum ajungi la ea
-  Google/SO considered harmful
-  Computers are useless
+  \begin{itemize}
+    \pause \item multă informație
+    \item informația nu este filtrată
+    \pause \item îți dă soluția la problemă, nu cum ajungi la ea
+    \pause \item Google/SO considered harmful
+  \end{itemize}
+  \pause
+  \vspace{1cm}
+  \centering
+  \textit{Computers are useless. They can only give you answers.}\\
+  \vspace{3mm}
+  \hfill \textit{Pablo Picasso}
 \end{frame}
 
 \begin{frame}{Imperfecțiuni și inabilități}
-  informații incomplete
-  obieceiuri ineficiente
-  presiune socială: așa e bine, așa se întâmplă
-  poveste cu cine nu putea să se strâmbe
+  \begin{itemize}
+    \pause \item informații incomplete
+    \pause \item obiceiuri ineficiente
+    \pause \item prejudecăți
+    \pause \item egocentrism: eu știu (mai bine), eu nu mă înșel (niciodată)
+    \pause \item autoritate inadecvată: \textit{It must be true, it's on the Internet.}
+    \pause \item presiune socială: așa e bine, așa se întâmplă
+    \pause \item (poveste) despre strâmbat
+  \end{itemize}
 \end{frame}
 
 \begin{frame}{De ce se întâmplă?}
-  lene
-  lipsă de răbdare
-  neconștientizarea alternativei
-  influență mare a celor din jur
-  absența gândirii critice
-  bias-uri: confirmation bias
-  instinctul de turmă, ,,compliance''
-  bulă socială
-  experimentul cu maimuțele
-  \url{http://www.throwcase.com/2014/12/21/that-five-monkeys-and-a-banana-story-is-rubbish/}
+  \begin{itemize}
+    \pause \item lene
+    \pause \item lipsă de răbdare
+    \pause \item neconștientizarea alternativei
+    \pause \item influență mare a celor din jur
+    \pause \item absența gândirii critice
+    \pause \item bias-uri: confirmation bias
+    \pause \item instinctul de turmă, ,,compliance''
+    \pause \item bulă socială
+    \pause \item \url{http://www.throwcase.com/2014/12/21/that-five-monkeys-and-a-banana-story-is-rubbish/}
+  \end{itemize}
 \end{frame}
 
 \begin{frame}{De ce e rău că se întâmplă?}
-  împrăștii dezinformare, cultivare de ignoranță
-  nu îți atingi potențialul, te auto-limitezi
-  te rigidizezi, nu te adaptezi, fosilizare
-  lumea este în mișcare rapidă, e dinamică
+  \begin{itemize}
+    \pause \item împrăștii dezinformare, cultivi ignoranță
+    \pause \item nu îți atingi potențialul, te auto-limitezi
+    \pause \item te rigidizezi, nu te adaptezi, te ,,fosilizezi''
+    \pause \item lumea este în mișcare rapidă, e dinamică
+  \end{itemize}
 \end{frame}
 
 \begin{frame}{Cea mai bună întrebare. Cel mai bun răspuns.}
-  stai în banca ta
-  bagă-te în față, dă din coate
-  Winston Churchill
+  \centering
+  \pause stai în banca ta \\
+    \pause vs. \\
+  \pause bagă-te în față, dă din coate\\
+  \pause
+  \vspace{5mm}
+  \textit{Courage is what it takes to stand up and speak; courage is also what it takes to sit down and listen.}\\
+  \vspace{3mm}
+  \hfill \textit{Winston Churchill}\\
+  \vspace{5mm}
+  \pause Cea mai bună întrebare: \textbf{De ce?} \\
+  \pause Cel mai bun răspuns: \textbf{Depinde}
 \end{frame}
 
 \begin{frame}{Despre dezvăț}
-  renunțat la obiceiuri, comportamente, gânduri, moduri de abordare
-  alterat obiceiuri, comportamente, gânduri, moduri de abordare
-  stricat și construit
-  Pink Floyd: Another Brick in the Wall
+  \begin{itemize}
+    \pause \item renunțat la obiceiuri, comportamente, gânduri, moduri de abordare
+    \pause \item alterat obiceiuri, comportamente, gânduri, moduri de abordare
+    \pause \item stricat și construit
+    \pause \item Pink Floyd: \textit{https://en.wikipedia.org/wiki/The\_Wall}
+  \end{itemize}
 \end{frame}
 
 \begin{frame}{Exemple și discuție}
@@ -135,66 +180,89 @@ I think Fizz-Buzz is ``hard'' for some programmers because (\#1) it doesn't fit 
 \end{frame}
 
 \begin{frame}{Pași}
-  conștientizare
-  găsit soluție
-  efort
-  reconstruire
-  menținut flexibilitate
+  \begin{enumerate}
+    \pause \item conștientizare
+    \pause \item găsit soluție
+    \pause \item efort (really really really hard)
+    \pause \item reconstruire
+    \pause \item menținut flexibilitate
+  \end{enumerate}
 \end{frame}
 
 \begin{frame}{Cum conștientizăm?}
-  introspecție
-  ,,citim'' în jur
+  \begin{itemize}
+    \pause \item introspecție
+    \pause \item ,,citim'' în jur
+  \end{itemize}
+  \pause
   \begin{figure}
     \centering
-    \includegraphics[width=0.4\textwidth]{img/michelangelo-ancora-imparo.jpg}
+    \includegraphics[width=0.4\textwidth]{img/getting-nasty-feedback.jpg}
   \end{figure}
-  \begin{center}
-    \scriptsize
-    \url{https://lh4.ggpht.com/-rCK887WJWO4/V6H7zXtJpJI/AAAAAAB57U0/9THgZkHaQ5c/w560/socialfeed-true-friendship-is-about-tough-love-9gag-mobile-app-www9gagcommobileref9fbp.jpg}
-  \end{center}
-  Primirea feedback-ului: Denial, Anger, Withdrawal, Acceptance
-  oferă, primește, cere, folosește, ia-o de la capăt
+  \begin{itemize}
+    \pause \item primirea feedback-ului: Denial, Anger, Withdrawal, Acceptance
+    \pause \item oferă, primește, cere, folosește, ia-o de la capăt
+  \end{itemize}
 \end{frame}
 
 \begin{frame}{Cum construim?}
-  acceptarea imperfecțiunilor
-  puterea de a spune nu știu
-  puterea de a nu te băga în ce nu ține de tine
-  conservarea timpului, atenției și energiei
-  filtarea exteriorului
+  \begin{itemize}
+    \pause \item acceptarea imperfecțiunilor
+    \pause \item puterea de a spune nu știu
+    \pause \item puterea de a nu te băga în ce nu ține de tine
+    \pause \item conservarea timpului, atenției și energiei
+    \pause \item filtarea exteriorului
+  \end{itemize}
+  \pause
+  \vspace{5mm}
+  \centering
   \textit{
   Nu vorbi fără să știi \\
   Nu hali mereu ce auzi de la alții, \\
   Nu te da ce nu poți să fii \\
   Sunt vorbe de c***t, le-aud în fiecare zi \\
   }
-  La Familia feat. Uzzi: Vorbe
+  \vspace{3mm}
+  \hfill \textit{La Familia feat. Uzzi: Vorbe}
 \end{frame}
 
 \begin{frame}{Recomandări}
-  Gândiți-vă la probleme, nu doar la soluții.
-  Faceți jocuri de logică, gândire laterală.
-  Călătoriți și stați printre oameni.
-  Interacționați cu oameni diferiți.
-  Jocuri de logică și gândire laterală.
-  Faceți puzzle-uri (Enigma: \url{https://www.puzzlemaster.ca/browse/wire/308-cast-enigma-metal})
+  \begin{itemize}
+    \pause \item Gândiți-vă la probleme, nu doar la soluții.
+    \pause \item Faceți jocuri de logică, gândire laterală.
+    \pause \item Călătoriți și stați printre oameni.
+    \pause \item Interacționați cu oameni diferiți.
+    \pause \item Jocuri de logică și gândire laterală.
+    \pause \item Faceți puzzle-uri.
+      \begin{itemize}
+        \item Enigma: \tiny{\url{https://www.puzzlemaster.ca/browse/wire/308-cast-enigma-metal}}
+      \end{itemize}
+  \end{itemize}
+  \pause
+  \vspace{5mm}
+  \centering
   \textit{My mind is my weapon. My brother has his sword, King Robert has his warhammer and I have my mind\ldots{} and a mind needs books as a sword needs a whetstone if it is to keep its edge. That's why I read so much, Jon Snow.}\\
-  Tyrion Lannister
+  \vspace{3mm}
+  \hfill \textit{Tyrion Lannister}
 \end{frame}
 
 \begin{frame}{Recomandări (2)}
-  Folosiți mai multe limbaje de programare. Contează problema nu limbajul.
-  Învățați programare funcțională.
-  Folosiți Linux.
-  Faceți lucrurile și altfel.
+  \begin{itemize}
+    \pause \item Folosiți mai multe limbaje de programare. Contează problema, nu limbajul.
+    \pause \item Învățați programare funcțională.
+    \pause \item Folosiți Linux.
+    \pause \item Faceți lucrurile și altfel.
+  \end{itemize}
 \end{frame}
 
 \begin{frame}{Recomandări (3)}
-  Meditați, analizați-vă.
-  Explorați-vă.
-  Cereți feedback. Acceptați feedback.
-  Enjoy!
+  \begin{itemize}
+    \pause \item Meditați, analizați-vă.
+    \pause \item Explorați-vă.
+    \pause \item Simțiți. Folosiți-vă emoțiile.
+    \pause \item Cereți feedback. Acceptați feedback.
+    \pause \item Bucurați-vă!
+  \end{itemize}
 \end{frame}
 
 \begin{frame}{În loc de final}
@@ -203,7 +271,7 @@ I think Fizz-Buzz is ``hard'' for some programmers because (\#1) it doesn't fit 
     \includegraphics[width=0.4\textwidth]{img/michelangelo-ancora-imparo.jpg}
   \end{figure}
   \begin{center}
-    \scriptsize
+    \tiny
     \url{http://learnteachserve.org/wp-content/uploads/2014/04/michelangelo_ancora-imparo.jpg}
   \end{center}
 \end{frame}
