despre-dezvat: Expand SO to StackOverflow

--- a/despre-dezvat/despre-dezvat.tex
+++ b/despre-dezvat/despre-dezvat.tex
@@ -106,7 +106,7 @@ razvan.deaconescu@cs.pub.ro}
     \pause \item multă informație
     \item informația nu este filtrată
     \pause \item îți dă soluția la problemă, nu cum ajungi la ea
-    \pause \item Google/SO considered harmful
+    \pause \item Google/StackOverflow considered harmful
   \end{itemize}
   \pause
   \vspace{1cm}
