despre-dezvat: Complete slides

--- a/despre-dezvat/despre-dezvat.tex
+++ b/despre-dezvat/despre-dezvat.tex
@@ -79,17 +79,6 @@ razvan.deaconescu@cs.pub.ro}
   \end{center}
 \end{frame}
 
-\begin{frame}{Luke Skywalker: Too Old}
-  \begin{figure}
-    \centering
-    \includegraphics[width=0.7\textwidth]{img/yoda-too-old}
-  \end{figure}
-  \begin{center}
-    \scriptsize
-    \url{https://memegenerator.net/instance/65152287}
-  \end{center}
-\end{frame}
-
 \begin{frame}{Cum învățăm?}
   \begin{itemize}
     \pause \item de la cei din jur
@@ -142,6 +131,17 @@ razvan.deaconescu@cs.pub.ro}
   \end{itemize}
 \end{frame}
 
+\begin{frame}{Luke Skywalker: Too Old}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.7\textwidth]{img/yoda-too-old}
+  \end{figure}
+  \begin{center}
+    \scriptsize
+    \url{https://memegenerator.net/instance/65152287}
+  \end{center}
+\end{frame}
+
 \begin{frame}{De ce e rău că se întâmplă?}
   \begin{itemize}
     \pause \item împrăștii dezinformare, cultivi ignoranță
@@ -179,7 +179,7 @@ razvan.deaconescu@cs.pub.ro}
   Răzvan
 \end{frame}
 
-\begin{frame}{Pași}
+\begin{frame}{Pași pentru dezvăț}
   \begin{enumerate}
     \pause \item conștientizare
     \pause \item găsit soluție
