de-ce-asamblare: Links to Joel on Software articles

--- a/de-ce-asamblare/de-ce-asamblare.tex
+++ b/de-ce-asamblare/de-ce-asamblare.tex
@@ -68,6 +68,31 @@ razvan.deaconescu@cs.pub.ro}
   \end{itemize}
 \end{frame}
 
+\begin{frame}{John ``maddog'' Hall: The Third Language}
+  \begin{itemize}
+    \item \url{https://www.lpi.org/the-third-language/}
+    \item \url{http://www.techworld.com/operating-systems/john-maddog-hall-why-raspberry-pi-is-only-beginning-3453073/2/}
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Joel Spolsky: Law of Leaky Abstractions}
+  \begin{itemize}
+    \item \url{http://www.joelonsoftware.com/articles/LeakyAbstractions.html}
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Parcurgerea unei matrice}
+  \begin{itemize}
+    \item TODO
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Shlemiel the Painter's Algorithm}
+  \begin{itemize}
+    \item Joel Spolsky: Back to Basics: \url{http://www.joelonsoftware.com/articles/fog0000000319.html}
+  \end{itemize}
+\end{frame}
+
 \begin{frame}{Înainte de a începe}
   \begin{itemize}
     \item mai des citire decât scriere
@@ -111,6 +136,14 @@ razvan.deaconescu@cs.pub.ro}
 %    \url{http://www.ted.com/talks/dan_pink_on_motivation?language=en}
 %  \end{center}
 %\end{frame}
+
+\begin{frame}{De ce e mai ușor?}
+  \begin{itemize}
+    \item mașini virtuale
+    \item emulatoare
+    \item documentație
+  \end{itemize}
+\end{frame}
 
 \begin{frame}{Cum învăț/cum aprofundez}
   \begin{itemize}
