de-ce-asamblare: Add image on assembly operations

--- a/de-ce-asamblare/de-ce-asamblare.tex
+++ b/de-ce-asamblare/de-ce-asamblare.tex
@@ -33,7 +33,7 @@ razvan.deaconescu@cs.pub.ro}
 \begin{frame}{Exemple din securitatea ofensivă}
   \begin{itemize}
     \pause \item \textit{offensive security}
-    \pause \item serviciu de tip \textit{hello} configurat pe mașina virtuală
+    \pause \item serviciu de tip \textit{hello} configurat pe mașină virtuală
     \pause \item \href{http://phrack.org/issues/49/14.html}{Smashing the Stack for Fun and Profit} (aleph1)
     \pause \item \url{https://www.exploit-db.com/local/}
     \pause \item \url{https://www.exploit-db.com/shellcode/}
@@ -43,9 +43,11 @@ razvan.deaconescu@cs.pub.ro}
 
 \begin{frame}{Nevoia de optimizare}
   \centering
+  \pause
   \textit{\href{http://c2.com/cgi/wiki?MakeItWorkMakeItRightMakeItFast}{Make it work. Make it right. Make it fast.}} \\
   \vspace{3mm}
   \hfill \textit{Kent Beck} \\
+  \pause
   \vspace{1cm}
   \footnotesize{\url{http://osxr.org:8080/glibc/source/sysdeps/x86/bits/string.h}}
 \end{frame}
@@ -97,7 +99,7 @@ razvan.deaconescu@cs.pub.ro}
 
 \begin{frame}{Parcurgerea unei matrice}
   \centering
-  Demo
+  Demo: \textit{walk\_matrix\_row\_major.c}, \textit{walk\_matrix\_column\_major.c}
 \end{frame}
 
 \begin{frame}{Shlemiel the Painter's Algorithm}
@@ -143,6 +145,13 @@ razvan.deaconescu@cs.pub.ro}
     \item rezultatele operațiilor sunt scrise înapoi în memorie
     \item unele informații pot fi preluate și transmise către dispozitive de intrare/ieșire
   \end{itemize}
+\end{frame}
+
+\begin{frame}{Operații de asamblare}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.9\textwidth]{img/operatii-de-asamblare.pdf}
+  \end{figure}
 \end{frame}
 
 \begin{frame}{Exemple în limbaj de asamblare}
